# Qadam-AI

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/migrations/: 0001_initial.sql
apps/api/src/qadam_api/: __init__.py  auth.py  domain.py  main.py  settings.py
apps/api/src/qadam_api/analysis/: __init__.py  clause_extractor.py  clause_taxonomy.py  document_qa.py  grounding.py  orchestrator.py  question_suggestions.py  rules.py
apps/api/src/qadam_api/api/: __init__.py  dependencies.py  problem.py
apps/api/src/qadam_api/documents/: __init__.py  evidence.py  language.py  parser.py  privacy.py  types.py  validation.py
apps/api/src/qadam_api/legal/: __init__.py  corpus.py  reranker.py  retriever.py
apps/api/src/qadam_api/providers/: __init__.py  embeddings.py  explanations.py  (+2 more)
apps/api/tests/: test_auth.py  test_domain.py  test_smoke.py
apps/api/tests/analysis/: test_clause_extractor.py  test_document_qa.py  test_grounding.py  test_orchestrator.py  test_question_suggestions.py  test_rules.py
apps/api/tests/api/: conftest.py  test_analyses.py  test_dependencies.py  test_health.py  test_questions.py
apps/api/tests/documents/: test_evidence.py  test_language.py  test_parser.py  test_privacy.py  test_validation.py
apps/api/tests/evaluation/: test_mvp_evaluation.py  test_retrieval_quality.py
apps/api/tests/legal/: test_corpus.py  test_reranker.py  test_retriever.py
apps/api/tests/providers/: test_explanations.py  test_question_answers.py
(+103 files in other folders)
