[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "qadam-api"
version = "0.1.0"
description = "Grounded rental-contract analysis API for QADAM AI"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "pgvector==0.5.0",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pymupdf==1.28.0",
  "python-docx==1.2.0",
  "python-multipart==0.0.32",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qadam_api"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["qadam_api"]

[[tool.mypy.overrides]]
module = ["fitz", "fitz.*"]
ignore_missing_imports = true
